# Kaggle

./: .dir-locals.el  .gitignore  Jenkinsfile  README.md  post-commit  pyproject.toml
BirdCLEF/: .dir-locals.el  readme.md
BirdCLEF/clef/: __init__.py  config_definitions.py  constant.py  controller.py  data.py  evaluator.py  model.py  optimizer.py  task.py  trainer.py  utility.py
BirdCLEF/clef/callbacks/: __init__.py  callback_delegate.py  callback_list.py  checkpoint.py  logger.py  progressbar.py
BirdCLEF/clef/config/: __init__.py  base_definitions.py  clef_definitions.py
BirdCLEF/clef/data/: __init__.py  tfrecords.py
BirdCLEF/clef/tasks/: __init__.py  base_task.py  clef_task.py  mnist_task.py
BirdCLEF/docker/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
BirdCLEF/notebooks/: create_dataset.ipynb  sample.proto  sample_conf.yml  sample_pb2.py  sandbox.ipynb
BirdCLEF/params/: sample.yaml
BirdCLEF/tests/: pytest.ini
CassavaLeafDisease/: .dir-locals.el  MANIFEST.in  readme.md  requirements.txt  setup.py  upload_weights.sh
CassavaLeafDisease/confs/: config.yaml  config_baseline.yaml  test_config.yaml
CassavaLeafDisease/notebooks/: plot_mistakes.ipynb  sandbox.ipynb
CassavaLeafDisease/results/: .gitignore
CassavaLeafDisease/results/upload/: dataset-metadata.json
CassavaLeafDisease/src/: __init__.py  constant.py  dataset.py  evaluate.py  lr_scheduler.py  model.py  plot.py  predict.py  solver.py  train.py  utility.py
MelanomaClassification/: requirements.txt
MelanomaClassification/notebook/: 20200615_00.ipynb  20200616_00.ipynb  20200618_00.ipynb  20200619_01.ipynb  20200620_01.ipynb  20200621_00.ipynb  20200622_00.ipynb  20200622_01.ipynb  20200623_00.ipynb  20200623_01.ipynb  20200628_01.ipynb  20200630_00.ipynb  20200711_00.ipynb
compes/: .gitignore
compes/AutonomousDriving/: centralnet_base.ipynb
compes/BirdCLEF/: .dir-locals.el  memo.org  readme.md  setup.py
compes/CassavaLeafDisease/: .gitignore  pyrightconfig.json  setup.py
compes/MelanomaClassification/: setup.py
compes/Titanic/: tutorial.ipynb
compes/UWMadison/: .dir-locals.el  pyproject.toml
compes/UWMadison/tests/: test_uwmadison.py
compes/UWMadison/uwmadison/: __init__.py  train.py
compes/UWMadison/uwmadison/models/: __init__.py  unet.py
compes/happy_wheel/: README.md  pyproject.toml
compes/happy_wheel/happy_wheel/: __init__.py  config.py  dataset.py  evaluate.py  identities.py  lr_schedulers.py  preprocess.py  sample_train.py  train.py
compes/happy_wheel/happy_wheel/dataset/: __init__.py  cross_validation.py  dataloader.py
compes/happy_wheel/notebooks/: eda.ipynb  preprocess_dataset.ipynb  restats  test_dataloader.ipynb  test_training.ipynb
compes/happy_wheel/results/: .gitignore
compes/happy_wheel/results/test/cv0/: config.json
compes/happy_wheel/results/test/cv1/: config.json
compes/happy_wheel/tests/: test_happy_wheel.py
docker/: Dockerfile
git_hook/: commit-msg
tests/: conftest.py  test_arcface.py
ykaggle_core/: __init__.py  config.py  losses.py  optimizers.py
ykaggle_core/losses/: __init__.py  arcface_loss.py
ykaggle_core/models/: __init__.py  vision_transformer.py
(+160 files in other folders)
