[tool.poetry]
name = "ykaggle_core"
version = "0.1.0"
description = "Common codes for competitions"
authors = ["y-kitamu"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
tensorflow = "^2.8.0"
pydantic = "^1.9.0"
black = "^22.1.0"
toml = "^0.10.2"
pandas = "^1.4.0"
numpy = "^1.22.2"
ipykernel = "^6.9.0"
albumentations = "^1.1.0"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["ykaggle_core"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "weights",
    "compes",
]
venvPath = ".venv"

[tool.black]
line-length = 100