[tool.poetry]
name = "UWMadison"
version = "0.1.0"
description = ""
authors = ["Kitamura <ymyk6602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tensorflow = "^2.8.0"
ykaggle-core = {path = "../.."}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 100

[tool.flake8]
max-complexity = 10
max-line-length = 105
indent-size = 4