[tool.poetry]
name = "happy_wheel"
version = "0.1.0"
description = ""
authors = ["y-kitamu"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
ykaggle_core = {path = "../../", develop = true}
toml = "^0.10.2"
numpy = "^1.22.2"
pandas = "^1.4.0"
opencv-python = "^4.5.5"
albumentations = "^1.1.0"
pydantic = "^1.9.0"
ipykernel = "^6.9.0"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
plotly = "^5.6.0"
ipywidgets = "^7.6.5"
scikit-learn = "^1.0.2"
tensorflow-datasets = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["happy_wheel"]
venvPath = ".venv"

[tool.black]
line-length = 100